@@ -10,6 +10,7 @@ $(document).ready(function() {
       overlapEventsSeparate: true,
       firstDayOfWeek : 1,
       businessHours :{start: 8, end: 18, limitDisplay: true },
+      daysToShow : 7,
       height : function($calendar) {
          return $(window).height() - $("h1").outerHeight() - 1;
       },
